--- a/Series/serie62.html
+++ b/Series/serie62.html
@@ -87,7 +87,116 @@ var serieActual = {
   poster: "https://image.tmdb.org/t/p/original/yhmHgYvxj1Xez3q6pJKxQVFiP4S.jpg"
 };
 
-var videosPorCapitulo = {"1":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":""},"2":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":""},"3":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":""},"4":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":""}};
+var videosPorCapitulo = {
+  "1": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/8i9pzxqdbcgf",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/krjw5910fxwi",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/xymovbx4q9gj",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/uawqfepmc8b2",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/vng47a19oxpt",
+    "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/iljv8d78tpet",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/uqobd6fdfanb",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/c3s2npjr7rkd",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/tt6jlrgqg5br",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/y0k98w8aiqs2",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/bgqogovluhm2",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/f4zrt8zld82d",
+    "13": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/fdydtm2iymre",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/9fku6aeo25ce",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/3rsiw2nooocx",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/5z16qt388rbr",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/7lxvwy3rn6c5",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/0nbv0y4i96fc",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/clqyqr8buw2z",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/xqu9ahvlfjy3",
+    "21": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/1qx2fypzimf7",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/11q626kc37bh",
+    "23": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/gegil0sczmt8",
+    "24": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ih9p4m8n6033",
+    "25": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/pj1gr2udw106",
+    "26": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/nm7dhgakpb41",
+    "27": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/hfse6qznrt9p",
+    "28": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/wiia2azrg84s"
+  },
+  "2": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/kof5ywbozrvy",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/g5orpwfckljz",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/jwy5fwyo69uw",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ojx3vu2vgxny",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/6eap498rxj6z",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/77iq3ls2f40u",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/nx83e3umlgy5",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/8dbzi7i506bb",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/j63k7qwkx4wb",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/6dn4kslf32rb",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/3peptede04p5",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/l67y6okvgq4s",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/c76led1lgpuj",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/h6995jn4jo50",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/72gz5b2ugco2",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/0ut92ymyo533",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/bmb05hiuftsa",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/7acqp6kupw5p",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/emem94i4y8bs",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/8n1sylr1lfk0",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/147n1529wmu0",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/bd8lemcxqa6q",
+    "23": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/92l4oi2nn9ro",
+    "24": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/484jz0wbv0ed"
+  },
+  "3": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/sk0n9ghrw7m2",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/z9ptnf2yan9v",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/95b75d22jii5",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/6f0uo4bmduyi",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/a4tdtffmtpdq",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/751jrcbfgxrz",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/t44dn8291384",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/c1rqeg0xza7u",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/viyieuw13srz",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/u8ixb987ht4h",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ms8e0rx5zh48",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/drmmmkugrvel",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ttcz2fithpgm",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/298092fdcwh7",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/8tj8z8lsgxc9",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/5qe3cxzoy0w4",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/tp40wq5wck6c",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/mu1e5j2vuwv7",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/1ws5te9fyvfh",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/rb8b78thh0ym",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ed5clccaks56",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/0aepu7xsqciw",
+    "23": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/y3u4days16pt",
+    "24": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/xirzqbaglrie"
+  },
+  "4": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/yx1p92leq2qq",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/670y7x7mgiw0",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/qjus6sl1imc8",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/dcuglvzui2nk",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/zjvxlr5dn0lv",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/0k0wz9et44qi",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/7hzm7dmzs831",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/hzrezr07wzy2",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/yc8v7iu3eduh",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/58q2t493nyjw",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/jgxn3z8yj1c7",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ssi25ui1wx1o",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/wdqqw0p0zpgg",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/cwj6zw5jzyfz",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/gfjvhwpu3woa",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/tq96eupqkm3b",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/jtb3fcr3n3sb",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/fgddzzhzyb41",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ofblfi5ss12b",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/jqdjktvww0iu",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/4aozylds9n66",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/d5h1kn1ktvnf",
+    "23": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/6o4r5vf3uqh1",
+    "24": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/7i18ennm8fyz"
+  }
+};
 
 function guardarTemporada(temporada) {
   localStorage.setItem("temporadaSeleccionada_" + serieId, temporada);
