--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -153,7 +153,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/yhmHgYvxj1Xez3q6pJKxQVFiP4S.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los Siete Pecados Capitales 2014</span>
-    <span class="hidden">Los Siete Pecados Capitales fueron una los protectores del Reino de Liones, pero tras un supuesto intento de golpe de estado, fueron enviados al exilio. Diez años después, los Caballeros Sagrados (supuestos salvadores del reino) toman el poder por la fuerza, formando un gobierno tiránico. Elizabeth, la tercera princesa Liones, iniciará entonces un viaje para intentar reunir a los Siete Pecados Capitales y convencerlos de ayudarla a recuperar el reino.</span>
+    <span class="hidden">the seven deadly sins los 7 Los Siete Pecados Capitales fueron una los protectores del Reino de Liones, pero tras un supuesto intento de golpe de estado, fueron enviados al exilio. Diez años después, los Caballeros Sagrados (supuestos salvadores del reino) toman el poder por la fuerza, formando un gobierno tiránico. Elizabeth, la tercera princesa Liones, iniciará entonces un viaje para intentar reunir a los Siete Pecados Capitales y convencerlos de ayudarla a recuperar el reino.</span>
   </a>
 </li>
 <!--FIN--><!-- El Mentalista -->
