--- a/Plataforma/sony/index.html
+++ b/Plataforma/sony/index.html
@@ -209,7 +209,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¿...Y Donde Estan las Rubias? -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dos Policias Rebeldes -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula567.html">
+    <img src="https://image.tmdb.org/t/p/original/ZYpSdXaTMFYCGbmVmXOFbdJmSv.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Dos Policías Rebeldes</div>
+  <div class="text-xs text-white/70">1995</div>
+</article><!-- ¿...Y Donde Estan las Rubias? -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula553.html">
     <img src="https://image.tmdb.org/t/p/original/9oXAJaR58sukn59HmFZzDCy79E5.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
