Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Siete Pecados Capitales -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dos Policias Rebeldes -->
+<li>
+  <a href="../Peliculas/pelicula567.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ZYpSdXaTMFYCGbmVmXOFbdJmSv.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Dos Policías Rebeldes 1995</span>
+    <span class="hidden">Un lote de heroína valorado en unos 100 millones de dólares es robado del mismísimo depósito de la policía. El caso le será asignado a los agentes Burnett y Lowery, una pareja muy peculiar por los métodos que utilizan. La única pista que tienen para comenzar es la de una testigo que les ayudará a identificar a los atracadores y a la que tendrán que proteger.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Siete Pecados Capitales -->
 <li>
   <a href="../Series/serie62.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
