Crear/Actualizar Categorias/crimen/index.html

--- a/Categorias/crimen/index.html
+++ b/Categorias/crimen/index.html
@@ -71,7 +71,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dos Policias Rebeldes -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bad Boys II: vuelven mas rebeldes -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula568.html">
+    <img src="https://image.tmdb.org/t/p/original/qyHDZB87UQF9cu6uuQzhhaKGvuo.jpg" alt="Bad Boys II: vuelven más rebeldes" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Bad Boys II: vuelven más rebeldes</div>
+  <div class="text-xs text-white/70">2003</div>
+</article><!-- Dos Policias Rebeldes -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula567.html">
     <img src="https://image.tmdb.org/t/p/original/ZYpSdXaTMFYCGbmVmXOFbdJmSv.jpg" alt="Dos Policías Rebeldes" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
