--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Dos Policias Rebeldes -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bad Boys II: vuelven mas rebeldes -->
+<li>
+  <a href="../Peliculas/pelicula568.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/qyHDZB87UQF9cu6uuQzhhaKGvuo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bad Boys II: vuelven más rebeldes 2003</span>
+    <span class="hidden">Los detectives de narcóticos Mike Lowrey y Marcus Burnett han sido asignados a un nuevo caso en Miami, donde un astuto narcotraficante  ha iniciado una sangrienta guerra. Además la amistad de los dos agentes se complica cuando Mike empieza a sentir algo por la hermana de Marcus...</span>
+  </a>
+</li>
+<!--FIN--><!-- Dos Policias Rebeldes -->
 <li>
   <a href="../Peliculas/pelicula567.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
