--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bad Boys II: vuelven mas rebeldes -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bad Boys para Siempre -->
+<li>
+  <a href="../Peliculas/pelicula569.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zXYARspjKpwN9vAOp2F9MF3NWa1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bad Boys para Siempre 2020</span>
+    <span class="hidden">Es la tercera y (supuestamente) última parte de Dos policías rebeldes, con sus dos protagonistas originales, Will Smith y Martin Lawrence. Acción y humor al estilo noventero con una trama random: los agentes, ya maduritos, vuelven a reunirse porque un criminal ha puesto precio a sus cabezas. Ya no dirige Michael Bay, sino los belgas Adil El Arbi y Bilall Fallah.</span>
+  </a>
+</li>
+<!--FIN--><!-- Bad Boys II: vuelven mas rebeldes -->
 <li>
   <a href="../Peliculas/pelicula568.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
