Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bad Boys para Siempre -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bad Boys: Hasta la muerte -->
+<li>
+  <a href="../Peliculas/pelicula570.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5jI2vEHJReAx8iFDmhC2O3yW37w.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bad Boys: Hasta la muerte 2024</span>
+    <span class="hidden">Tras escuchar falsas acusaciones sobre su excapitán y mentor Mike y Marcus deciden investigar el asunto incluso volverse los más buscados de ser necesarios</span>
+  </a>
+</li>
+<!--FIN--><!-- Bad Boys para Siempre -->
 <li>
   <a href="../Peliculas/pelicula569.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
