--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -153,7 +153,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/5jI2vEHJReAx8iFDmhC2O3yW37w.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Bad Boys: Hasta la muerte 2024</span>
-    <span class="hidden">Tras escuchar falsas acusaciones sobre su excapitán y mentor Mike y Marcus deciden investigar el asunto incluso volverse los más buscados de ser necesarios</span>
+    <span class="hidden"> ride or die badboys dos policias rebeldes 2 malos Tras escuchar falsas acusaciones sobre su excapitán y mentor Mike y Marcus deciden investigar el asunto incluso volverse los más buscados de ser necesarios</span>
   </a>
 </li>
 <!--FIN--><!-- Bad Boys para Siempre -->
@@ -162,7 +162,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/zXYARspjKpwN9vAOp2F9MF3NWa1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Bad Boys para Siempre 2020</span>
-    <span class="hidden">Es la tercera y (supuestamente) última parte de Dos policías rebeldes, con sus dos protagonistas originales, Will Smith y Martin Lawrence. Acción y humor al estilo noventero con una trama random: los agentes, ya maduritos, vuelven a reunirse porque un criminal ha puesto precio a sus cabezas. Ya no dirige Michael Bay, sino los belgas Adil El Arbi y Bilall Fallah.</span>
+    <span class="hidden">badboys dos policias rebeldes 2 malos  forever for life Es la tercera y (supuestamente) última parte de Dos policías rebeldes, con sus dos protagonistas originales, Will Smith y Martin Lawrence. Acción y humor al estilo noventero con una trama random: los agentes, ya maduritos, vuelven a reunirse porque un criminal ha puesto precio a sus cabezas. Ya no dirige Michael Bay, sino los belgas Adil El Arbi y Bilall Fallah.</span>
   </a>
 </li>
 <!--FIN--><!-- Bad Boys II: vuelven mas rebeldes -->
@@ -171,7 +171,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/qyHDZB87UQF9cu6uuQzhhaKGvuo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Bad Boys II: vuelven más rebeldes 2003</span>
-    <span class="hidden">Los detectives de narcóticos Mike Lowrey y Marcus Burnett han sido asignados a un nuevo caso en Miami, donde un astuto narcotraficante  ha iniciado una sangrienta guerra. Además la amistad de los dos agentes se complica cuando Mike empieza a sentir algo por la hermana de Marcus...</span>
+    <span class="hidden">badboys dos policias rebeldes 2 malos  bad boys Los detectives de narcóticos Mike Lowrey y Marcus Burnett han sido asignados a un nuevo caso en Miami, donde un astuto narcotraficante  ha iniciado una sangrienta guerra. Además la amistad de los dos agentes se complica cuando Mike empieza a sentir algo por la hermana de Marcus...</span>
   </a>
 </li>
 <!--FIN--><!-- Dos Policias Rebeldes -->
@@ -180,7 +180,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/ZYpSdXaTMFYCGbmVmXOFbdJmSv.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Dos Policías Rebeldes 1995</span>
-    <span class="hidden">Un lote de heroína valorado en unos 100 millones de dólares es robado del mismísimo depósito de la policía. El caso le será asignado a los agentes Burnett y Lowery, una pareja muy peculiar por los métodos que utilizan. La única pista que tienen para comenzar es la de una testigo que les ayudará a identificar a los atracadores y a la que tendrán que proteger.</span>
+    <span class="hidden">badboys dos policias rebeldes 2 malos  bad boys 1 Un lote de heroína valorado en unos 100 millones de dólares es robado del mismísimo depósito de la policía. El caso le será asignado a los agentes Burnett y Lowery, una pareja muy peculiar por los métodos que utilizan. La única pista que tienen para comenzar es la de una testigo que les ayudará a identificar a los atracadores y a la que tendrán que proteger.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Siete Pecados Capitales -->
