--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,21 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El juego del miedo 2 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- It (Eso) 1990 -->
+<li>
+  <a href="../Peliculas/pelicula573.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+    <img 
+      src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/uuTYA9LIlIRCFMgFlxWb1KznfEx.jpg" 
+      alt="It (Eso) 1990" 
+      class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" 
+      loading="lazy" 
+    />
+    <span class="hidden">It (Eso) 1990</span>
+    <span class="hidden">it eso 1990 pennywise payaso terror stephen king miniserie misterio horror Un grupo de amigos de la infancia se reúne 30 años después en su ciudad natal, Derry, para enfrentarse nuevamente a una entidad maligna que toma la forma de un payaso aterrador llamado Pennywise. Adaptación de la novela de Stephen King.</span>
+  </a>
+</li>
+<!--FIN-->
+<!-- El juego del miedo 2 -->
 <li>
   <a href="../Peliculas/pelicula572.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
