--- a/Categorias/terror/index.html
+++ b/Categorias/terror/index.html
@@ -90,7 +90,20 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
   </a>
   <div class="mt-2 font-semibold text-sm leading-tight truncate">El juego del miedo</div>
   <div class="text-xs text-white/70">2004</div>
-</article><!-- La hacienda: El regreso de los malditos -->
+</article><!-- It (Eso) 1990 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula573.html">
+    <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/uuTYA9LIlIRCFMgFlxWb1KznfEx.jpg" 
+         alt="It (Eso) 1990" 
+         class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">It (Eso)</div>
+  <div class="text-xs text-white/70">1990</div>
+</article>
+<!-- La hacienda: El regreso de los malditos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula559.html">
     <img src="https://image.tmdb.org/t/p/original/vXUfuM7tPvAL8HjjnsFO4yYbKUs.jpg" alt="La hacienda: El regreso de los malditos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
