--- a/Categorias/terror/index.html
+++ b/Categorias/terror/index.html
@@ -70,7 +70,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El juego del miedo 2 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- It (Eso) -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula574.html">
+    <img src="https://image.tmdb.org/t/p/original/sSrj4lnhrb113DOPEPTaO2jaDk3.jpg" alt="It (Eso)" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">It (Eso)</div>
+  <div class="text-xs text-white/70">2017</div>
+</article><!-- El juego del miedo 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula572.html">
     <img src="https://image.tmdb.org/t/p/original/gw7nQp0rXmEF81SvumCXWx7U5nb.jpg" alt="El juego del miedo 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
