--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- It (Eso) 1990 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- It (Eso) -->
+<li>
+  <a href="../Peliculas/pelicula574.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sSrj4lnhrb113DOPEPTaO2jaDk3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">It (Eso) 2017</span>
+    <span class="hidden">En el verano de 1989, un grupo de niños maltratados se unieron para destruir a un monstruo cambia-formas, que se disfraza de payaso y se aprovecha de los niños de Derry, su pequeño pueblo de Maine.</span>
+  </a>
+</li>
+<!--FIN--><!-- It (Eso) 1990 -->
 <li>
   <a href="../Peliculas/pelicula573.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
     <img 
@@ -167,7 +176,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/gw7nQp0rXmEF81SvumCXWx7U5nb.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">El juego del miedo 2 2005</span>
-    <span class="hidden">Decide rápido… o muere despacio». Cuando aparece una nueva víctima de asesinato con los signos característicos de Jigsaw, el Agente Eric Matthews (Donnie Wahlberg) se embarca en una investigación exhaustiva que le permite detener al asesino sin demasiado esfuerzo. Sin embargo, para Jigsaw ser detenido no es sino otra parte de su retorcido plan. Hay otras ocho víctimas jugándose la vida y ahora le toca a Matthews unirse al juego…</span>
+    <span class="hidden">Decide rápido⬦ o muere despacio». Cuando aparece una nueva víctima de asesinato con los signos característicos de Jigsaw, el Agente Eric Matthews (Donnie Wahlberg) se embarca en una investigación exhaustiva que le permite detener al asesino sin demasiado esfuerzo. Sin embargo, para Jigsaw ser detenido no es sino otra parte de su retorcido plan. Hay otras ocho víctimas jugándose la vida y ahora le toca a Matthews unirse al juego⬦</span>
   </a>
 </li>
 <!--FIN--><!-- El juego del miedo -->
