--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -153,7 +153,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/9oERKIVyTWpHNum3STVsAGD4ojz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">IT: Capítulo 2 2019</span>
-    <span class="hidden">En este segundo capitulo Han pasado 27 años desde que el "Club de los Perdedores", formado por Bill, Berverly, Richie, Ben, Eddie, Mike y Stanley, se enfrentaran al macabro y despiadado Pennywise (Bill Skarsgård). En cuanto tuvieron oportunidad, abandonaron el pueblo de Derry, en el estado de Maine, que tantos problemas les había ocasionado. Sin embargo, ahora, siendo adultos, parece que no pueden escapar de su pasado. Todos deberán enfrentarse de nuevo al temible payaso para descubrir si de verdad están preparados para superar sus traumas de la infancia.</span>
+    <span class="hidden">it eso el payaso asesino maldito En este segundo capitulo Han pasado 27 años desde que el "Club de los Perdedores", formado por Bill, Berverly, Richie, Ben, Eddie, Mike y Stanley, se enfrentaran al macabro y despiadado Pennywise (Bill Skarsgård). En cuanto tuvieron oportunidad, abandonaron el pueblo de Derry, en el estado de Maine, que tantos problemas les había ocasionado. Sin embargo, ahora, siendo adultos, parece que no pueden escapar de su pasado. Todos deberán enfrentarse de nuevo al temible payaso para descubrir si de verdad están preparados para superar sus traumas de la infancia.</span>
   </a>
 </li>
 <!--FIN--><!-- It (Eso) -->
@@ -162,7 +162,7 @@ document.addEventListener("DOMContentLoaded", () => {
    <img 
   src="https://image.tmdb.org/t/p/original/sSrj4lnhrb113DOPEPTaO2jaDk3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">It (Eso) 2017</span>
-    <span class="hidden">En el verano de 1989, un grupo de niños maltratados se unieron para destruir a un monstruo cambia-formas, que se disfraza de payaso y se aprovecha de los niños de Derry, su pequeño pueblo de Maine.</span>
+    <span class="hidden">it eso el payaso asesino maldito 1 En el verano de 1989, un grupo de niños maltratados se unieron para destruir a un monstruo cambia-formas, que se disfraza de payaso y se aprovecha de los niños de Derry, su pequeño pueblo de Maine.</span>
   </a>
 </li>
 <!--FIN--><!-- It (Eso) 1990 -->
@@ -175,7 +175,7 @@ document.addEventListener("DOMContentLoaded", () => {
       loading="lazy" 
     />
     <span class="hidden">It (Eso) 1990</span>
-    <span class="hidden">it eso 1990 pennywise payaso terror stephen king miniserie misterio horror Un grupo de amigos de la infancia se reúne 30 años después en su ciudad natal, Derry, para enfrentarse nuevamente a una entidad maligna que toma la forma de un payaso aterrador llamado Pennywise. Adaptación de la novela de Stephen King.</span>
+    <span class="hidden">it eso el payaso asesino maldito it eso 1990 pennywise payaso terror stephen king miniserie misterio horror Un grupo de amigos de la infancia se reúne 30 años después en su ciudad natal, Derry, para enfrentarse nuevamente a una entidad maligna que toma la forma de un payaso aterrador llamado Pennywise. Adaptación de la novela de Stephen King.</span>
   </a>
 </li>
 <!--FIN-->
