--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -72,7 +72,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bad Boys: Hasta la muerte -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Minions -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula576.html">
+    <img src="https://image.tmdb.org/t/p/original/nmqLwaTfgyWLQWbYd82w159cAqJ.jpg" alt="Los Minions" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Minions</div>
+  <div class="text-xs text-white/70">2015</div>
+</article><!-- Bad Boys: Hasta la muerte -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula570.html">
     <img src="https://image.tmdb.org/t/p/original/5jI2vEHJReAx8iFDmhC2O3yW37w.jpg" alt="Bad Boys: Hasta la muerte" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
