--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -40,7 +40,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Minions y sus amigos: Volumen 2 -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Minions y sus amigos: Volumen 1 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula578.html">
+    <img src="https://image.tmdb.org/t/p/original/wCQBzTOigP5eCyBAjQGlWYNo5DR.jpg" alt="Minions y sus amigos: Volumen 1" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Minions y sus amigos: Volumen 1</div>
+  <div class="text-xs text-white/70">2022</div>
+</article><!-- Minions y sus amigos: Volumen 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula577.html">
     <img src="https://image.tmdb.org/t/p/original/ib78eWDzoccYt2BhPp8TvwpguO0.jpg" alt="Minions y sus amigos: Volumen 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
