--- a/index.html
+++ b/index.html
@@ -410,6 +410,24 @@ document.addEventListener("DOMContentLoaded", async () => {
     </div>
     <div id="kdramaCarousel" class="flex gap-4 overflow-x-auto pb-2 scrollbar-hide"></div>
   </section>
+
+	 <div class="flex-1 max-w-3xl space-y-4 md:ml-3 pt-2">
+        <h2 class="text-2xl sm:text-3xl md:text-5xl font-extrabold text-white tracking-tight drop-shadow-lg">Ver estrenos : 2025</h2>
+        <div class="flex items-center gap-3 text-xs md:text-sm">
+          <span class="bg-gradient-to-r from-blue-500 to-indigo-600 text-white px-3 py-0.5 rounded-lg font-semibold shadow-md">2025</span>
+          <div class="flex items-center gap-1 text-yellow-400">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 md:w-5 md:h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294 .904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771 .56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53 .53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53 .53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"></path></svg>
+          </div>
+          <span class="text-white/70 uppercase tracking-wide">Lo Mejor!</span>
+        </div>
+        <p class="text-white/80 text-sm md:text-base line-clamp-3 max-w-2xl leading-relaxed">✨ ¡Prepárate para los estrenos más esperados de 2025! Nuevas películas, emoción y aventuras que no querrás perderte. 🎬🔥</p>
+        <div class="flex items-center gap-4 pt-3 md:pt-4">
+          <a href="HOME/ESTRENOS.html" class="flex items-center gap-2 bg-gradient-to-r from-blue-600 to-indigo-600 text-white px-5 py-2 rounded-lg font-semibold shadow-lg hover:scale-105 hover:shadow-2xl transition-all duration-300 text-sm md:text-base">
+            <svg class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="10"></circle><polygon points="10 8 16 12 10 16 10 8"></polygon></svg>
+            Explorar
+          </a>
+        </div>
+      </div>
 </main>
 <footer class="bg-[#081423] text-white mt-12">
   <div class="max-w-6xl mx-auto px-4 py-8 grid grid-cols-1 sm:grid-cols-3 gap-6">
@@ -736,3 +754,4 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
