--- a/Plataforma/universal/index.html
+++ b/Plataforma/universal/index.html
@@ -211,7 +211,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Minions y sus amigos: Volumen 1 -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi villano favorito -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula579.html">
+    <img src="https://image.tmdb.org/t/p/original/AsaaPLSfisdFDeasEd9r0GiZVss.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mi villano favorito</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- Minions y sus amigos: Volumen 1 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula578.html">
     <img src="https://image.tmdb.org/t/p/original/wCQBzTOigP5eCyBAjQGlWYNo5DR.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
