Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Minions y sus amigos: Volumen 1 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi villano favorito -->
+<li>
+  <a href="../Peliculas/pelicula579.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/AsaaPLSfisdFDeasEd9r0GiZVss.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi villano favorito 2010</span>
+    <span class="hidden">En una alegre urbanización con cuidados jardines rodeados por verjas de madera pintadas de blanco y llenos de rosales, sobresale una casa negra con el césped amarillento. Los vecinos ignoran que debajo de la vivienda hay un enorme escondite secreto. Allí está Gru, rodeado por un pequeño ejército de lacayos, planeando el mayor robo de toda la historia. ¡Va a robarse con la luna!</span>
+  </a>
+</li>
+<!--FIN--><!-- Minions y sus amigos: Volumen 1 -->
 <li>
   <a href="../Peliculas/pelicula578.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
