--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -69,7 +69,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi villano favorito -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi Villano Favorito 2 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula580.html">
+    <img src="https://image.tmdb.org/t/p/original/hhksXOBVJ6Mu2BwAFgPJwZxNisd.jpg" alt="Mi Villano Favorito 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mi Villano Favorito 2</div>
+  <div class="text-xs text-white/70">2013</div>
+</article><!-- Mi villano favorito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula579.html">
     <img src="https://image.tmdb.org/t/p/original/AsaaPLSfisdFDeasEd9r0GiZVss.jpg" alt="Mi villano favorito" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
