Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi villano favorito -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi Villano Favorito 2 -->
+<li>
+  <a href="../Peliculas/pelicula580.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hhksXOBVJ6Mu2BwAFgPJwZxNisd.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mi Villano Favorito 2 2013</span>
+    <span class="hidden">Ahora que el incansable y emprendedor Gru ha dejado atrás una vida dedicada a las fechorías para criar a Margo, Edith y Agnes, dispone de mucho tiempo libre para disfrutarlo con ellas, el Dr. Nefario y los minions. Pero, justo cuando empieza a adaptarse a su papel de padre de familia, una organización mundial ultrasecreta dedicada a la lucha contra el mal llama a su puerta.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi villano favorito -->
 <li>
   <a href="../Peliculas/pelicula579.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
