--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -69,7 +69,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi Villano Favorito 3 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi villano favorito 4 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula582.html">
+    <img src="https://image.tmdb.org/t/p/original/b6JX0fBne5yPFNBtdp4Imi3CpiE.jpg" alt="Mi villano favorito 4" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mi villano favorito 4</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Mi Villano Favorito 3 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula581.html">
     <img src="https://image.tmdb.org/t/p/original/mz3zTmsnySgFWGc3ZsBbCQbalut.jpg" alt="Mi Villano Favorito 3" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
