--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -40,7 +40,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi villano favorito 4 -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Minions: Nace un villano -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula583.html">
+    <img src="https://image.tmdb.org/t/p/original/fzwG3cukayxKpCK0lqS1jkSBqJk.jpg" alt="Minions: Nace un villano" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Minions: Nace un villano</div>
+  <div class="text-xs text-white/70">2022</div>
+</article><!-- Mi villano favorito 4 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula582.html">
     <img src="https://image.tmdb.org/t/p/original/b6JX0fBne5yPFNBtdp4Imi3CpiE.jpg" alt="Mi villano favorito 4" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
