--- a/Categorias/western/index.html
+++ b/Categorias/western/index.html
@@ -28,4 +28,14 @@
   </a>
   <div class="mt-2 font-semibold text-sm leading-tight truncate">Los 6 Ridículos</div>
   <div class="text-xs text-white/70">2015</div>
+</article><!-- Ajuste de cuentas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula585.html">
+    <img src="https://image.tmdb.org/t/p/original/lxRVe7JtMaZ3Yb3T2eycnPeJvvZ.jpg" alt="Ajuste de cuentas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Ajuste de cuentas</div>
+  <div class="text-xs text-white/70">2025</div>
 </article>
