Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Doble Traicion -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ajuste de cuentas -->
+<li>
+  <a href="../Peliculas/pelicula585.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lxRVe7JtMaZ3Yb3T2eycnPeJvvZ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ajuste de cuentas 2025</span>
+    <span class="hidden">Un sheriff en apuros se une a un duro U.S. Marshal para detener a una astuta forajida. A medida que aumentan las tensiones dentro de su pelotón, deben enfrentarse a una banda que se aproxima, liderada por el violento marido de la prisionera.</span>
+  </a>
+</li>
+<!--FIN--><!-- Doble Traicion -->
 <li>
   <a href="../Peliculas/pelicula584.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
