--- a/Series/serie4.html
+++ b/Series/serie4.html
@@ -89,7 +89,11 @@ var serieActual = {
   poster: "https://image.tmdb.org/t/p/original/8IIPZe4V2xNYFWY7lBY6GpN2L8O.jpg"
 };
 
-var videosPorCapitulo = {"1":{"1":"https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9odWdoLmNkbi5ydW1ibGUuY2xvdWQvdmlkZW8vZnd3MS8yMi9zOC8yL1MvNy9SLy0vUzdSLXkuYWFhLm1wNA==&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvMjVnN210aFhvSkZjTlpoQUt6MGV2azE3QnN4LmpwZw==&title=QWxpZW46IEVhcnRo","2":"https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md3cxL2YwL3M4LzIvUS9wL1MvLS9RcFMteS5hYWEubXA0&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvMjVnN210aFhvSkZjTlpoQUt6MGV2azE3QnN4LmpwZw==&title=QWxpZW46IEVhcnRo","3":"https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9odWdoLmNkbi5ydW1ibGUuY2xvdWQvdmlkZW8vZnd3MS83ZC9zOC8yL0svdy8wL2EvS3cwYXouYWFhLm1wNA==&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvMjVnN210aFhvSkZjTlpoQUt6MGV2azE3QnN4LmpwZw==&title=QWxpZW46IEVhcnRo",}};
+var videosPorCapitulo = {"1":{"1":"https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9odWdoLmNkbi5ydW1ibGUuY2xvdWQvdmlkZW8vZnd3MS8yMi9zOC8yL1MvNy9SLy0vUzdSLXkuYWFhLm1wNA==&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvMjVnN210aFhvSkZjTlpoQUt6MGV2azE3QnN4LmpwZw==&title=QWxpZW46IEVhcnRo","2":"https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly8xYS0xNzkxLmNvbS92aWRlby9md3cxL2YwL3M4LzIvUS9wL1MvLS9RcFMteS5hYWEubXA0&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvMjVnN210aFhvSkZjTlpoQUt6MGV2azE3QnN4LmpwZw==&title=QWxpZW46IEVhcnRo","3":"https://lzrdrz10.github.io/repro/player.html?video=aHR0cHM6Ly9odWdoLmNkbi5ydW1ibGUuY2xvdWQvdmlkZW8vZnd3MS83ZC9zOC8yL0svdy8wL2EvS3cwYXouYWFhLm1wNA==&poster=aHR0cHM6Ly9pbWFnZS50bWRiLm9yZy90L3Avb3JpZ2luYWwvMjVnN210aFhvSkZjTlpoQUt6MGV2azE3QnN4LmpwZw==&title=QWxpZW46IEVhcnRo",
+                        "4": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/1dlmqw4f97yo",
+                             "5": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/cxgg823hgjzn",
+                             "6": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/s48xwos698j5",
+                             }};
 
 function cargarFavoritos() {
   var favs = localStorage.getItem('seriesFavoritas');
