--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ajuste de cuentas -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El juego del miedo 3 -->
+<li>
+  <a href="../Peliculas/pelicula586.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/raUejCvrhUl0VTjcj8b0gJLBUhQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El juego del miedo 3 2006</span>
+    <span class="hidden">Nuevas y macabras aventuras del siniestro Jigsaw, el hombre que mueve los hilos de los espantosos juegos que han aterrorizado a la comunidad y desconcertado a la policía. Jigsaw, una vez más, ha conseguido escapar, esta vez con la ayuda de su nueva aprendiz, Amanda (Shawnee Smith). Mientras la policía local intenta localizarle, el Doctor Lynn Denlon (Bahar Soomekh) y Jeff (Angus Macfayden) no saben que están a punto de convertirse en los siguientes peones de este horrible juego.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ajuste de cuentas -->
 <li>
   <a href="../Peliculas/pelicula585.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
