--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El juego del miedo 3 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El juego del miedo 4 -->
+<li>
+  <a href="../Peliculas/pelicula587.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/owzhppFoegtjAkEhyxQhRtgPl96.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El juego del miedo 4 2007</span>
+    <span class="hidden">Jigsaw y su aprendiz Amanda están muertos. Ahora, luego de hacerse público el asesinato de la detective Kerry, dos agentes del FBI, el Agente Strahn y el Agente Pérez, llegan a la aterrorizada comunidad para ayudar al veterano detective Hoffman a examinar minuciosamente los restos grisáceos que quedaron de Jigsaw, y así resolver el rompecabezas. Sin embargo, cuando el Comandante Rigg, perteneciente a la brigada especial SWAT, es secuestrado y empujado dentro del juego, contará con tan solo noventa minutos para triunfar en una serie de trampas dementes y salvar a un viejo amigo o enfrentar las consecuencias mortales…</span>
+  </a>
+</li>
+<!--FIN--><!-- El juego del miedo 3 -->
 <li>
   <a href="../Peliculas/pelicula586.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
