--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El juego del miedo 5 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El juego del miedo 6 -->
+<li>
+  <a href="../Peliculas/pelicula589.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xeRsqKxQyMemmBZ4BSkzhwVPeud.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El juego del miedo 6 2009</span>
+    <span class="hidden">El Agente Especial Strahm está muerto, y el Detective Hoffman es el sucesor de Jigsaw y su juego macabro. Sin embargo, cuando la Brigada de Investigación Criminal comienza a estrechar el cerco a Hoffman, lo forzarán a poner en marcha el juego complejo de Jigsaw, y por fin a entenderlo por completo… Sexta entrega de la sangrienta saga Saw.</span>
+  </a>
+</li>
+<!--FIN--><!-- El juego del miedo 5 -->
 <li>
   <a href="../Peliculas/pelicula588.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
