--- a/Categorias/terror/index.html
+++ b/Categorias/terror/index.html
@@ -70,7 +70,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El juego del miedo 7 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Jigsaw: El Juego Continua -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula591.html">
+    <img src="https://image.tmdb.org/t/p/original/90T0Cjx2yl6RaFhxas1eKnCphh5.jpg" alt="Jigsaw: El Juego Continúa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Jigsaw: El Juego Continúa</div>
+  <div class="text-xs text-white/70">2017</div>
+</article><!-- El juego del miedo 7 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula590.html">
     <img src="https://image.tmdb.org/t/p/original/gn4z3QWHyBVbIIRNucsW6xuhJE2.jpg" alt="El juego del miedo 7" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
