--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El juego del miedo 7 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Jigsaw: El Juego Continua -->
+<li>
+  <a href="../Peliculas/pelicula591.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/90T0Cjx2yl6RaFhxas1eKnCphh5.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Jigsaw: El Juego Continúa 2017</span>
+    <span class="hidden">Jigsaw está de vuelta. En esta ocasión atrapará a cinco personas y las enfrentará en una serie de juegos sangrientos como castigo por sus delitos. Al mismo tiempo tiene lugar una investigación en la que científicos forenses tratan de encontrar y capturar al asesino, con la sospecha de que alguien del equipo puede ser el responsable.</span>
+  </a>
+</li>
+<!--FIN--><!-- El juego del miedo 7 -->
 <li>
   <a href="../Peliculas/pelicula590.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
